--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/logo"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                android:src="@"
+                android:src="@drawable/logo"
                 android:layout_alignParentStart="true" />
         </RelativeLayout>
 
