--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -25,7 +25,7 @@
 
         <!-- 아이디 입력 -->
         <EditText
-            android:id="@+id/et_id"
+            android:id="@+id/etId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="아이디 (6~20자 이내의 영문/숫자 입력)"
@@ -33,7 +33,7 @@
 
         <!-- 비밀번호 입력 -->
         <EditText
-            android:id="@+id/et_password"
+            android:id="@+id/etPw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="비밀번호 (6~20자 이내의 영문/숫자 입력)"
@@ -155,7 +155,7 @@
 
         <!-- 회원 가입 완료 버튼 -->
         <Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btnRegi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="회원 가입 완료"
