--- a/app/src/main/res/layout/goods.xml
+++ b/app/src/main/res/layout/goods.xml
@@ -29,6 +29,7 @@
         android:layout_gravity="center"
         android:weightSum="10">
         <TextView
+            android:id="@+id/goodsPrice"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:text="NA원"
